# coinvert

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
src/: exchange.rs  main.rs
