[package]
name = "coinvert"
version = "0.0.1"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }

[dev-dependencies]
cargo-semver = "1.0.0-alpha.3"
rand = "0.9.0"
